<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tipogrupo"
    android:orientation="vertical"
    android:background="@color/fundo"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:background="@color/preto"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/arbutus_slab"
            android:text="@string/PerguntaCondição"
            android:textAlignment="center"
            android:textColor="@color/branco"
            android:textSize="@dimen/titulo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="16"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bree_serif"
            android:text="@string/subtitulo1"
            android:textAlignment="center"
            android:textColor="@color/preto"
            android:textSize="@dimen/subtitulos" />

        <ImageButton
            android:contentDescription="Mobilidade reduzida"
            android:background="@color/fundo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/cadeira_rodas"
            android:id="@+id/cadeira_rodas"
            />



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="21"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bree_serif"
            android:text="@string/subtitulo2"
            android:textAlignment="center"
            android:textColor="@color/preto"
            android:textSize="@dimen/subtitulos" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="16"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="16"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:background="@color/fundo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/cego"
                android:id="@+id/cegos"
                android:contentDescription="Invisual"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="16"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:contentDescription="Autismo"
                android:background="@color/fundo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/autismo"
                android:id="@+id/autista"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="16"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageButton
                android:contentDescription="Surdez"
                android:background="@color/fundo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/surdos"
                android:id="@+id/surdos"/>


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="21"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bree_serif"
            android:text="@string/subtitulo3"
            android:textAlignment="center"
            android:textColor="@color/preto"
            android:textSize="@dimen/subtitulos" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="16"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="16"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:contentDescription="Gravidas e Crianças"
                android:background="@color/fundo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/gravidacriancas"
                android:id="@+id/gravidas_criancas"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="16"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageButton
                android:contentDescription="Idosos"
                android:background="@color/fundo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/idosos"
                android:id="@+id/idoso"/>


        </RelativeLayout>

    </LinearLayout>



</LinearLayout>